# mcp-test

./: .gitignore  flake.nix  index.html  pyproject.toml  server.py
