[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qsc-mcp-server"
version = "0.1.0"
description = "QSC Product Search MCP Server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.1.0",
    "requests>=2.31.0",
    "starlette>=0.35.0",
    "uvicorn>=0.27.0",
]

[project.scripts]
qsc-mcp = "server:mcp.run"

[tool.setuptools.packages.find]
where = ["."]
include = ["server.py"]
